# keyszer

./: .codespellrc  .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  UPGRADE_FROM_XKEYSNAIL.md  USING_WITH_KINTO.md  _setup.py  ctx_gnome_dbus.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 1_bug_report.md  config.yml  feature_request.md
.github/workflows/: lint.yml  tests.yml
contrib/redhat/: 90-keymapper-acl.rules  keyszer.conf  keyszer.service  keyszer.spec  uinput.conf  xhostplus.desktop
example/: config.py
keyszer/: __init__.py  info.py  key.py
keyszer/lib/: benchit.py
keyszer/models/: combo.py
src/keyszer/: __init__.py  cli.py  config_api.py  devices.py  info.py  input.py  logger.py  output.py  transform.py  version.py  wayland.py  xorg.py
src/keyszer/context/: ctx__connector.py  ctx_kdeplasma_dbus_testing.py  ctx_wl_gnome_dbus.py  ctx_xorg.py  gnome_dbus.py  testing_ctx_wl_gnome_gdbus.py  testing_kdeplasma_dbus.py  testing_wl_sway_dbus.py  wl_gnome_dbus_shell_ext.py  wl_gnome_dbus_windowsext.py  wl_gnome_dbus_xremap.py  x11_xorg.py
src/keyszer/lib/: benchit.py  env.py  key_context.py  keymap.py  logger.py  modmap.py  test_env_extensions.py  window_context.py
src/keyszer/models/: action.py  combo.py  kb_layout.py  key.py  keymap.py  keystate.py  modifier.py  modmap.py  trigger.py
tests/: perf.py  test_1.py  test_api_helpers.py  test_basics.py  test_helpers.py  test_keymap_basics.py  test_modmap.py  test_modmap_cond.py  test_modmap_cond_multi.py  test_modmap_multi.py  test_nested_keymaps.py  test_sticky_bind.py
tests/fixtures/: kinto.py
tests/lib/: api.py  uinput_stub.py  xorg_mock.py
tools/: check.sh  publish
xkeysnail/: __init__.py  cli.py  config_api.py  info.py  input.py  key.py  logger.py  output.py  transform.py  xorg.py
xkeysnail/lib/: keymap.py  modmap.py
xkeysnail/models/: combo.py  modifier.py
