[project]
name = "keyszer"
version = "0.4.99"
description = "A smart, flexible key remapper for Linux/X11."
keywords = [
    "keymapper"
]
maintainers = [
    { name = "Josh Goebel", email = "hello@joshgoebel.com" }
]
readme = "README.md"
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Home-page = "https://github.com/jgoebel/keyszer"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

