[project]
name = "keyszer"
version = "0.4.99"
description = "A smart, flexible keymapper for Linux/X11."
keywords = [
    "keymapper"
]
maintainers = [
    { name = "Josh Goebel", email = "hello@joshgoebel.com" }
]
readme = "README.md"
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL3",
    "Operating System :: Linux"
]

[project.urls]
Home-page = "https://github.com/jgoebel/keyszer"
Bug-tracker = "https://github.com/jgoebel/keyszer/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

