[project]
name = "keyszer"
description = "A smart, flexible keymapper for Linux."
keywords = [
    "keymapper"
]
maintainers = [
    { name = "Josh Goebel", email = "hello@joshgoebel.com" }
]
requires-python = ">=3.6"
readme = "README.md"
dynamic = ["version"]
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 4 - Beta"
]
dependencies = [
    "evdev ~= 1.5",
    "python-xlib == 0.31",
    "inotify_simple ~= 1.3",
    "appdirs ~= 1.4",
    "ordered_set ~= 4.1"
]

[project.scripts]
keyszer = "keyszer.cli:main"

[project.urls]
Home-page = "https://github.com/jgoebel/keyszer"
Bug-tracker = "https://github.com/jgoebel/keyszer/issues"

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-asyncio",
    "looptime",
    "toml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "looptime",
    "toml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]

[tool.hatch.version]
path = "src/keyszer/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bin",
    "/src",
    "/tests",
    "/example",
    "/*.md"
]
exclude = [
    "/.github",
    "/.gitignore",
    "/docs"
]

[tool.hatch.build.targets.wheel]
packages = ["src/keyszer"]
