[metadata]
platforms = 
    linux
project_urls =
    Bug Tracker = https://github.com/jgoebel/keyszer/issues

[options]
packages = find:
package_dir=
    =src
install_requires =
    evdev 
    python-xlib 
    inotify_simple 
    appdirs
    ordered_set
# is this right, I really have no idea?
dev_requires = 
    toml
    pytest
    pytest-asyncio
    looptime
[options.packages.find]
where=src